rs/macros/tests/ui/gprogram_fails_for_service_with_not_valid_route.stderr
error: `route` argument requires a literal with a valid Rust identifier: unexpected token
 --> tests/ui/gprogram_fails_for_service_with_not_valid_route.rs:9:22
  |
9 |     #[export(route = "svc1/")]
  |                      ^^^^^^^
